migrate DB to Postgres

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,5 @@
-FROM mysql:8
+FROM postgres:latest
 
-ENV MYSQL_ROOT_PASSWORD=password
+# ENV MYSQL_ROOT_PASSWORD=password
 
 COPY create_db.sql /docker-entrypoint-initdb.d/
