--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres
+    build: ./db
     volumes:
       - ./db/data/db:/var/lib/postgresql/data
     environment:
