debug views and models (method GET only)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - POSTGRES_NAME=postgres
+      - POSTGRES_NAME=orderflow_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     depends_on:
