--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -6,3 +6,6 @@ django-cors-headers==3.14.0
 
 # # Django Rest Framework - Used to design API logic
 djangorestframework==3.11.0
+
+pytest>=6.2.5
+pytest-django>=4.4.0
