--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = django_test_githubactions.settings
+pythonpath = ../web
+DJANGO_SETTINGS_MODULE = orderflow.settings
+python_files = tests.py test_*.py *_tests.py
