--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -2,10 +2,12 @@ Django>=3.0,<4.0
 psycopg2>=2.8
 
 # # Django Cors Headers - Used to enable CORS headers in API responses, and allow requests to be made to your API server from other origins.
-django-cors-headers==3.14.0
+django-cors-headers>=3.14.0
 
 # # Django Rest Framework - Used to design API logic
-djangorestframework==3.11.0
+djangorestframework>=3.11.0
+
+djangorestframework-simplejwt>=5.2.2
 
 pytest>=6.2.5
 pytest-django>=4.4.0
