--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,14 +55,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r web/requirements.txt
-    # - name: Setup Node.js
-    #   uses: actions/setup-node@v3
-    #   with:
-    #     node-version: 18
-    # - name: Install frontend dependencies
-    #   run: |
-    #     cd front
-    #     npm ci
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - name: Install frontend dependencies
+      run: |
+        cd front
+        npm ci
     - name: Run Tests
       run: |
         pytest .
