change the CI workflow to remove the backend start

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,10 +54,10 @@ jobs:
       run: |
         cd front
         npm ci
-    - name: Start backend
-      run: |
-        cd web
-        python manage.py runserver
+    # - name: Start backend
+    #   run: |
+    #     cd web
+    #     python manage.py runserver
     - name: Start frontend
       run: |
         cd front
