tune the CI workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Start frontend
       run: |
         cd front
-        npm start
+        npm start &
     - name: Run Tests
       run: |
         pytest .
