--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
     # Service containers to run with `runner-job`
     services:
       # Label used to access the service container
-      db:
+      postgres:
         # Docker Hub image
         image: postgres
         # Provide the password for postgres
@@ -56,8 +56,12 @@ jobs:
         npm ci
     - name: Start backend
       run: |
+        export POSTGRES_HOST=localhost
+        export POSTGRES_NAME=orderflow_db
+        export POSTGRES_USER=postgres
+        export POSTGRES_PASSWORD=postgres
         cd web
-        python manage.py runserver
+        python manage.py runserver 0.0.0.0:8000
     - name: Start frontend
       run: |
         cd front
