--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,7 +60,11 @@ jobs:
         export POSTGRES_NAME=orderflow_db
         export POSTGRES_USER=postgres
         export POSTGRES_PASSWORD=postgres
+        sudo apt update
+        sudo apt install postgresql-client
+        psql -U "$POSTGRES_USER" -c "CREATE DATABASE $POSTGRES_NAME;"
         cd web
+        python manage.py migrate
         python manage.py runserver 0.0.0.0:8000
     - name: Start frontend
       run: |
