--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,13 +56,13 @@ jobs:
         npm ci
     - name: Start backend
       run: |
-        export POSTGRES_HOST=localhost
+        export POSTGRES_HOST=postgres
         export POSTGRES_NAME=orderflow_db
         export POSTGRES_USER=postgres
         export POSTGRES_PASSWORD=postgres
-        # sudo apt update
-        # sudo apt install postgresql-client
-        # psql -U "$POSTGRES_USER" -c "CREATE DATABASE $POSTGRES_NAME;"
+        sudo apt update
+        sudo apt install postgresql-client
+        psql -U "$POSTGRES_USER" -c "CREATE DATABASE $POSTGRES_NAME;"
         cd web
         python manage.py migrate
         python manage.py runserver 0.0.0.0:8000
