--- a/front/package.json
+++ b/front/package.json
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@types/jwt-decode": "^3.1.0"
+    "@types/cypress": "^1.1.3",
+    "@types/jwt-decode": "^3.1.0",
+    "cypress": "^12.17.0"
   }
 }
