--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -75,13 +75,11 @@ jobs:
         PGPASSWORD="$POSTGRES_PASSWORD" psql -h "$POSTGRES_HOST" -U "$POSTGRES_USER" -d "$POSTGRES_NAME" << EOF
         INSERT INTO orderapi_product (product_id, product_name, price)
         VALUES
-          (1, 'Product 1', 29),
-          (2, 'Product 2', 19),
-          (3, 'Product 3', 9);
+          (1, 'Product 1', 29);
         EOF
 
         # List columns
-        # PGPASSWORD="$POSTGRES_PASSWORD" psql -h "$POSTGRES_HOST" -U "$POSTGRES_USER" -d "$POSTGRES_NAME" -c "\d orderapi_product"
+        PGPASSWORD="$POSTGRES_PASSWORD" psql -h "$POSTGRES_HOST" -U "$POSTGRES_USER" -d "$POSTGRES_NAME" -c "\d orderapi_product"
 
         # start the Django server
         python manage.py runserver 0.0.0.0:8000 &
@@ -89,7 +87,7 @@ jobs:
       uses: cypress-io/github-action@v5
       with:
         working-directory: ./front
-        wait-on: 'http://localhost:8000'
+        # wait-on: 'http://localhost:8000'
     - name: Start frontend
       run: |
         cd front
