--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -94,6 +94,6 @@ jobs:
       run: |
         cd front
         npm start &
-    - name: Run Tests
+    - name: Run Selenium Tests (via pytest)
       run: |
         pytest .
