imrove UI test coverage (Selenium)

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-pythonpath = web
-DJANGO_SETTINGS_MODULE = orderflow.settings
+; pythonpath = web
+; DJANGO_SETTINGS_MODULE = orderflow.settings
 python_files = tests.py test_*.py *_tests.py
