rename a project subdirectory

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Install backend (Python) dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r web/requirements.txt
+        pip install -r back/requirements.txt
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
@@ -67,8 +67,8 @@ jobs:
         sudo apt install postgresql-client
         PGPASSWORD="$POSTGRES_PASSWORD" psql -h "$POSTGRES_HOST" -U "$POSTGRES_USER" -c "CREATE DATABASE $POSTGRES_NAME;"
 
-        # create Django and project tables in the project database (see web/orderapi/migrations/0001_initial.py)
-        cd web
+        # create Django and project tables in the project database (see back/orderapi/migrations/0001_initial.py)
+        cd back
         python manage.py migrate
 
         # add products to the project database
