--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-; pythonpath = web
+; pythonpath = back
 ; DJANGO_SETTINGS_MODULE = orderflow.settings
 python_files = tests.py test_*.py *_tests.py
