--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,16 @@ services:
       - POSTGRES_PASSWORD=postgres
     depends_on:
       - db
-      
+  jenkins:
+    image: jenkins/jenkins:lts
+    ports:
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - .:/project
+    environment:
+      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
+
+volumes:
+  jenkins_home:
